--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -3,12 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="175dp"
-    android:layout_height="225dp"
+    android:layout_height="250dp"
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp"
     android:id="@+id/gallery_cardview"
+
     >
-    
+
+
     <!--<ImageView-->
         <!--android:layout_width="56dp"-->
         <!--android:layout_height="56dp"-->
@@ -30,12 +32,16 @@
 
         </ImageView>
 
-        <ImageView
+        <ImageButton
+            android:background="@color/colorWhite"
             android:id="@+id/coupon_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/favorites_green" />
+            android:src="@drawable/pressable_favorite"
+            />
+
+
 
         <TextView
             android:id="@+id/company_name"
@@ -56,6 +62,7 @@
             android:text="Coupon Desc"/>
 
     </LinearLayout>
+
     
 </android.support.v7.widget.CardView>
     <!--<LinearLayout-->
