--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -1,56 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_width="175dp"
-    android:layout_height="250dp"
-    android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp"
     android:id="@+id/gallery_cardview"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_width="175dp"
+    android:layout_height="175dp"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    cardview:cardCornerRadius="4dp">
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:cardview="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="175dp"-->
+    <!--android:layout_height="250dp"-->
+    <!--android:layout_margin="5dp"-->
+    <!--cardview:cardCornerRadius="4dp"-->
+    <!--android:id="@+id/gallery_cardview" >-->
 
-    >
 
-
-    <!--<ImageView-->
-        <!--android:layout_width="56dp"-->
-        <!--android:layout_height="56dp"-->
-        <!--android:src="@mipmap/ic_launcher_round"-->
-        <!--android:id="@+id/coupon_img" />-->
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <ImageView
             android:id="@+id/coupon_img"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="120dp"
             android:scaleType="centerCrop"
-            android:background="@color/colorGold" >
-
-        </ImageView>
+            android:background="@color/colorGold"
+            />
 
         <ImageButton
-            android:background="@color/colorWhite"
             android:id="@+id/coupon_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/pressable_favorite"
-            />
+            android:background="@null"
+            android:layout_margin="5dp"
+            android:src="@drawable/pressable_favorite" />
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/coupon_border"
+            android:layout_below="@id/coupon_favorite"/>
 
 
         <TextView
             android:id="@+id/company_name"
             android:textColor="@color/colorGreen"
+            android:layout_margin="5dp"
             android:textSize="13dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/coupon_img"
             android:text="Company Name"/>
+
 
         <TextView
             android:id="@+id/coupon_desc"
@@ -59,44 +66,11 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Coupon Desc"/>
+            android:layout_below="@id/company_name"
+            android:text="Coupon Desc"
+            />
 
-    </LinearLayout>
 
-    
+
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
-    <!--<LinearLayout-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/coupon_img"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="160dp"-->
-            <!--android:scaleType="centerCrop"-->
-            <!--android:background="@color/colorGold"-->
-            <!--/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/company_name"-->
-            <!--android:textColor="@color/colorGreen"-->
-            <!--android:textSize="13dp"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="Company Name"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/coupon_desc"-->
-            <!--android:textColor="@color/colorGreen"-->
-            <!--android:textSize="13dp"-->
-            <!--android:gravity="center"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="Coupon Desc"/>-->
-
-    <!--</LinearLayout>-->
-
-
-<!--</android.support.v7.widget.CardView>-->
