--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
-    android:orientation="vertical">
-
+    tools:context="edu.usf.cse.labrador.save_a_bull.fragment.Gallery.GalleryFragment"
+    android:padding="8dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gallery_recyclerview"
