--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -2,12 +2,11 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/gallery_cardview"
+    android:id="@+id/cardview_item_coupon_id"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="175dp"
     android:layout_height="175dp"
-
     android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp">
     <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
@@ -17,7 +16,6 @@
     <!--android:layout_margin="5dp"-->
     <!--cardview:cardCornerRadius="4dp"-->
     <!--android:id="@+id/gallery_cardview" >-->
-
 
     <RelativeLayout
         android:layout_width="match_parent"
