--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/coupon_img"
-            android:text="Company Name"/>
+            android:text="@string/company_name"/>
 
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/company_name"
-            android:text="Coupon Desc"
+            android:text="@string/coupon_desc"
             />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
