--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--The layout of each individual coupon card in the gallery-->
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
