--- a/app/src/main/res/layout/cardview_item_coupon.xml
+++ b/app/src/main/res/layout/cardview_item_coupon.xml
@@ -9,14 +9,8 @@
     android:layout_width="175dp"
     android:layout_height="175dp"
     android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp">
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:cardview="http://schemas.android.com/apk/res-auto"-->
-    <!--android:layout_width="175dp"-->
-    <!--android:layout_height="250dp"-->
-    <!--android:layout_margin="5dp"-->
-    <!--cardview:cardCornerRadius="4dp"-->
-    <!--android:id="@+id/gallery_cardview" >-->
+    cardview:cardCornerRadius="4dp"
+    android:focusable="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
