--- a/app/src/main/res/layout/dialog_account_settings.xml
+++ b/app/src/main/res/layout/dialog_account_settings.xml
@@ -3,15 +3,15 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
-    android:layout_height="410dp"
+    android:layout_height="405dp"
     android:layout_gravity="center"
-    android:background="#000000">
+    android:background="@color/colorBlack">
 
     <LinearLayout
         android:id="@+id/ll_dialog_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#2e2e2e"
+        android:background="@color/darkMode"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_marginTop="50dp">
@@ -20,34 +20,40 @@
             android:id="@+id/usernamename_dialog_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="3dp"
             android:hint="@string/username"
             android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorGreen"
             android:scrollbarSize="24sp"
-            android:layout_marginTop="70dp"
-            />
+
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/password_dialog_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
             android:hint="@string/password"
             android:textSize="18sp"
             android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorGreen"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"/>
+
+            android:inputType="textPassword"/>
 
         <EditText
             android:id="@+id/email_dialog_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="10dp"
             android:hint="@string/prompt_email"
             android:textSize="18sp"
             android:textColorHint="@color/colorWhite"
             android:textColor="@color/colorGreen"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:inputType="text"
+            android:importantForAutofill="no" />
 
         <Button
             android:id="@+id/save_acct_changes_btn"
@@ -58,7 +64,7 @@
             android:layout_gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FF7B7B7B"
+            android:background="@color/medGray"
             android:text="Save Changes"
             android:textColor="@color/colorWhite"/>
 
@@ -71,7 +77,7 @@
             android:layout_gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FF7B7B7B"
+            android:background="@color/medGray"
             android:text="Delete Account"
             android:textColor="@color/colorWhite"/>
 
