--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4e4e4e"
+    android:background="@color/darkMode"
     tools:context="edu.usf.cse.labrador.save_a_bull.fragment.Gallery.GalleryFragment"
     android:padding="8dp">
 
