--- a/app/src/main/res/menu/nav.xml
+++ b/app/src/main/res/menu/nav.xml
@@ -22,7 +22,7 @@
         android:title="@string/title_maps"/>
 
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_about"
         android:icon="@drawable/usf_bulls_logo"
         android:title="@string/about"/>
 
