--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -4,6 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
     android:layout_height="300dp"
+    android:maxHeight="600dp"
+    android:maxWidth="600dp"
     android:layout_gravity="center"
     android:background="@color/colorBlack">
 
@@ -70,8 +72,11 @@
         android:id="@+id/img_dialog"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:maxWidth="500dp"
+        android:maxHeight="500dp"
         android:src="@color/colorGold"
         android:padding="10dp"
+        android:adjustViewBounds="true"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         />
@@ -82,6 +87,13 @@
         android:layout_height="match_parent"
         android:visibility="invisible"
         android:contentDescription="Zoom touch to close" />
+
+    <ImageView
+        android:id="@+id/enlarged_coupon_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorGold"
+        android:visibility="invisible"/>
 
 
 </RelativeLayout>
