--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -31,6 +31,12 @@
         android:hint="Description"
         android:inputType="textPersonName" />
 
+    <Spinner
+        android:id="@+id/categorySpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
     <Button
         android:id="@+id/takePhoto_btn"
         android:layout_width="match_parent"
