--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -14,13 +14,12 @@
         android:id="@+id/imageView3"
         android:layout_width="172dp"
         android:layout_height="167dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="120dp"
+        android:layout_gravity="center"
         app:srcCompat="@mipmap/bull_logo_round" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="168dp"
+        android:layout_height="150dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         tools:context=".SignUpScreen">
@@ -36,11 +35,6 @@
                 android:id="@+id/firstNameEntry"
                 android:layout_width="165dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
                 android:ems="10"
                 android:hint="@string/first_name"
                 android:inputType="textPersonName" />
@@ -58,10 +52,6 @@
                 android:id="@+id/lastNameEntry"
                 android:layout_width="165dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="24dp"
                 android:ems="10"
                 android:hint="@string/last_name"
                 android:inputType="textPersonName" />
@@ -70,7 +60,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="168dp"
+        android:layout_height="150dp"
         android:background="@color/colorWhite"
         android:orientation="horizontal"
         tools:context=".SignUpScreen">
@@ -80,37 +70,26 @@
             android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp">
-
+            >
             <EditText
                 android:id="@+id/usernameEntry"
                 android:layout_width="165dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
                 android:ems="10"
                 android:hint="@string/username"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/validatePassword"
             android:layout_width="165dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp">
+            android:layout_height="wrap_content" >
 
             <EditText
                 android:id="@+id/passwordEntry"
                 android:layout_width="165dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="24dp"
                 android:ems="10"
                 android:hint="@string/password"
                 android:inputType="textPassword"/>
@@ -123,10 +102,9 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="100dp"
         android:text="@string/create_account"
-        android:layout_marginLeft="125dp" />
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
 <!--<?xml version="1.0" encoding="utf-8"?>-->
