User able to take coupon image from photos already on their phone

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -40,7 +40,7 @@
     <Button
         android:id="@+id/takePhoto_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:background="@drawable/button_shape"
         android:backgroundTint="@color/colorBlack"
         android:textColor="@color/colorWhite"
@@ -48,9 +48,19 @@
         android:layout_margin="10dp"/>
 
     <Button
+        android:id="@+id/findPhoto_btn"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/colorBlack"
+        android:textColor="@color/colorWhite"
+        android:text="Get Photo from Your Gallery"
+        android:layout_margin="10dp"/>
+
+    <Button
         android:id="@+id/upload_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="Upload to the gallery"
         android:background="@drawable/button_shape"
         android:backgroundTint="@color/colorBlack"
