--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,33 +9,60 @@
     android:background="@drawable/msc_background" >
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="231dp"
+        android:layout_width="120dp"
+        android:layout_height="131dp"
         android:background="@drawable/main_hab_logo"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         />
+
+    <Button
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/log_out_btn"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:background="@drawable/button_shape"
+        android:backgroundTint="@color/colorBlack"
+        android:textColor="@color/colorWhite"
+        android:text="Log out" />
 
     <TextView
         android:layout_gravity="center_horizontal"
-        android:id="@+id/textView"
+        android:id="@+id/about_text_view"
         android:layout_width="300dp"
         android:layout_height="110dp"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:background="@drawable/about_shape"
         android:padding="10dp"
         android:text="@string/about_saveabull"
         android:textAlignment="center"
         android:textColor="@color/colorWhite" />
 
+
+    <EditText
+        android:id="@+id/user_feedback"
+        android:layout_width="300dp"
+        android:layout_height="110dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/button_shape"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:hint="Enter your feedback here!"
+        android:inputType="textMultiLine"
+        android:lines="5" />
+
+
+
     <Button
         android:layout_gravity="center_horizontal"
-        android:id="@+id/home_settings_btn"
+        android:id="@+id/submit_feedback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_shape"
         android:backgroundTint="@color/colorBlack"
         android:textColor="@color/colorWhite"
         android:padding="10dp"
-        android:text="Edit account" />
+        android:text="Submit Feedback" />
 
 </LinearLayout>
