Log out button added to About Fragment

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -24,7 +24,7 @@
         android:background="@drawable/button_shape"
         android:backgroundTint="@color/colorBlack"
         android:textColor="@color/colorWhite"
-        android:text="Log out" />
+        android:text="LOG OUT" />
 
     <TextView
         android:layout_gravity="center_horizontal"
