deleted:    AboutFragment.java 	deleted:    AndroidManifest.xml deleted:    AuthenticatorActivity.java 	deleted:    Coupons.java 	deleted:    Deals.java deleted:    ForgetAndChangePasswordActivity.java 	deleted:    LoginScreen.java 	deleted:    MainScreen.java 	deleted:    SignUpScreen.java 	deleted:    User.java 	deleted:    UsersDBManager.java 	deleted:    UsersDataB.java 	deleted:    WelcomeScreen.java 	deleted:    activity_forget_and_change_password.xml 	deleted:    activity_login_screen.xml 	deleted:    activity_main_screen.xml 	deleted:    activity_sign_up_screen.xml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/LoginScreen.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/SignUpScreen.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/WelcomeScreen.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/fragment/AboutFragment.java modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/sqlite/database/UsersDBManager.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/sqlite/database/UsersDataB.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/sqlite/database/model/User.java 	modified:   app/src/main/res/layout/activity_login_screen.xml 	modified:   app/src/main/res/layout/activity_sign_up_screen.xml 	modified:   app/src/main/res/layout/dialog_account_settings.xml 	modified:   app/src/main/res/values/strings.xml 	deleted:    awsconfiguration.json 	deleted:    build.gradle 	deleted:    dialog_account_settings.xml 	deleted:    strings.xml

--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -66,17 +66,17 @@
         tools:context=".SignUpScreen">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/validateUsername"
+            android:id="@+id/validateEmail"
             android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             >
             <EditText
-                android:id="@+id/usernameEntry"
+                android:id="@+id/emailEntry"
                 android:layout_width="165dp"
                 android:layout_height="50dp"
                 android:ems="10"
-                android:hint="@string/username"
+                android:hint="@string/email"
                 android:inputType="textPersonName"
                 />
         </android.support.design.widget.TextInputLayout>
