--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -8,7 +8,7 @@
     tools:context=".LoginScreen">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/validUsername"
+        android:id="@+id/validEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -23,7 +23,7 @@
         app:layout_constraintBottom_toTopOf="@+id/validPassword"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
         <EditText
-            android:id="@+id/usernameText"
+            android:id="@+id/emailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -32,8 +32,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="20dp"
             android:ems="10"
-            android:hint="@string/username"
-            android:inputType="textPersonName"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             app:layout_constraintBottom_toTopOf="@+id/passwordText"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintBottom_toTopOf="@+id/checkEntriesLoginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/validUsername">
+        app:layout_constraintTop_toBottomOf="@+id/validEmail">
         <EditText
             android:id="@+id/passwordText"
             android:layout_width="wrap_content"
@@ -82,10 +82,29 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/button_shape_green"
         android:text="@string/login"
         android:textColor="@color/colorWhite"
+        app:layout_constraintBottom_toTopOf="@+id/forget_password_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/forget_password_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="76dp"
+        android:textSize="10dp"
+        android:background="@color/colorWhite"
+        android:text="@string/forgetPassword"
+        android:textColor="@color/colorGreen"
+        android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -100,7 +119,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/validUsername"
+        app:layout_constraintBottom_toTopOf="@+id/validEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
