--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -40,11 +40,20 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"/>
 
+        <TextView
+            android:id="@+id/coupon_exp_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Expiry Date"
+            android:textSize="15sp"
+            android:textColor="@color/colorWhite"
+            android:layout_marginBottom="5dp"/>
+
         <Button
             android:id="@+id/call_dialog_btn"
             android:drawablePadding="20dp"
             android:textAlignment="textStart"
-            android:padding="20dp"
+            android:padding="10dp"
             android:drawableLeft="@drawable/mobile_call"
             android:layout_gravity="start"
             android:layout_width="match_parent"
@@ -57,7 +66,7 @@
             android:id="@+id/location_dialog_btn"
             android:drawablePadding="20dp"
             android:textAlignment="textStart"
-            android:padding="20dp"
+            android:padding="10dp"
             android:drawableLeft="@drawable/map"
             android:layout_gravity="start"
             android:layout_width="match_parent"
