modified:   .idea/caches/gradle_models.ser 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/ForgetAndChangePasswordActivity.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/SignUpScreen.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/fragment/Gallery/GalleryFragment.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/fragment/Gallery/RecycleViewAdapter.java 	modified:   app/src/main/java/edu/usf/cse/labrador/save_a_bull/sqlite/database/DatabaseHelper.java 	new file:   app/src/main/res/layout/activity_forget_and_change_password2.xml 	modified:   app/src/main/res/layout/activity_login_screen.xml 	modified:   app/src/main/res/layout/activity_sign_up_screen.xml modified:   app/src/main/res/layout/dialog_account_settings.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -76,7 +76,7 @@
                 android:layout_width="165dp"
                 android:layout_height="50dp"
                 android:ems="10"
-                android:hint="@string/username"
+                android:hint="@string/email"
                 android:inputType="textPersonName"
                 />
         </android.support.design.widget.TextInputLayout>
