--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -32,7 +32,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="20dp"
             android:ems="10"
-            android:hint="@string/username"
+            android:hint="@string/email"
             android:inputType="textPersonName"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             app:layout_constraintBottom_toTopOf="@+id/passwordText"
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintBottom_toTopOf="@+id/checkEntriesLoginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/validUsername">
+        app:layout_constraintTop_toBottomOf="@+id/validateUsername">
         <EditText
             android:id="@+id/passwordText"
             android:layout_width="wrap_content"
